# FINALPROJECTLSJ

./: README.md  pyproject.toml
.github/workflows/: CI.yml
ArchivosMD/: .InformeLinealizacion.md.swp  Cuestionario Sebas.md  CuestionarioJose.md  CuestionarioLeandro.md  Informe.md  InformeLinealizacion.md  InformeSemana5.md  InformeSemana6.md  Informe_Semana6.md  poetry.md  semana 6.md  teoria_git.md  teoria_unittest.md
CodigoProyecto/: CalculosMetodos.py  CoefiA.py  CoefiB.py  Constante_k.py  Estructura.py  GenerarGrafico.py  GraficaMovArmonico.py  LectorCsv.py  LinealizarDatos.py  PeriodoT.py  calc_errores.py
Csv/: tabla1.csv  tabla1cam.csv  tabla1camVX.csv  tabla1vx.csv  tabla2.csv  tabla2cam.csv  tabla2camVX.csv  tabla2vx.csv  tabla3.csv  tabla3cam.csv  tabla3camVX.csv  tabla3vx.csv  tabla4.csv  tabla4cam.csv  tabla4camVX.csv  tabla4vx.csv  tabla5.csv  tabla5cam.csv  tabla5camVX.csv  tabla5vx.csv  tabla6.csv  tabla6cam.csv  tabla6camVX.csv  tabla6vx.csv
Tests/: test_CalculoMetodos.py  test_CoefiA.py  test_CoefiB.py  test_errores.py
