[project]
name = "finalprojectlsj"
version = "0.1.0"
description = "Proyecto Para graficar Ejercicios de LabFisica FINALPROJECTLSJ"
authors = [
    {name = "LEANDROORTUNO",email = "menprogramacion@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
